appId: ${APP_ID}
tags:
  - android-only
---
- runFlow: ../../subflows/_launch.yaml
- runFlow: ../../subflows/franceconnect/open.yaml
- runFlow: ../../subflows/auth/login.yaml
- runFlow: ../../subflows/onboarding/dismiss.yaml
- runFlow: ../../elements/_loadAll.yaml

# TODO : naviguer vers /#/contact dans la SPA pour faire apparaître le bouton logs
- extendedWaitUntil:
    visible: "${output.logs_button}"
    timeout: 30000
- tapOn: "${output.logs_button}"
- extendedWaitUntil:
    visible: "${output.logs_share_hint}"
    timeout: 10000
