appId: ${APP_ID}
tags:
  - settings
---
- runFlow: ../elements/loadElements.yaml
- runFlow: ../subflows/_launch.yaml
- runFlow: ../subflows/_login.yaml

- tapOn:
    id: ${output.settings.tab}

- assertVisible:
    id: ${output.settings.screen}

- tapOn:
    id: ${output.settings.editProfile}

- assertVisible:
    id: ${output.settings.profile.screen}

- tapOn:
    id: ${output.settings.profile.phoneInput}
- clearText
- inputText: "0600000001"

- tapOn:
    id: ${output.settings.profile.saveButton}

- assertVisible:
    id: ${output.settings.screen}

- tapOn:
    id: ${output.settings.logoutButton}

- assertVisible:
    id: ${output.onboarding.authChoice}
